added modals component

--- a/assets/scss/fonts.scss
+++ b/assets/scss/fonts.scss
@@ -19,6 +19,13 @@
   src: url('~@/static/fonts/Montserrat-Medium.ttf') format("truetype");
 }
 
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  text-transform: uppercase;
+  src: url('~@/static/fonts/Montserrat-SemiBold.ttf') format("truetype");
+}
 
 @font-face {
   font-family: 'Montserrat';
