--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -4,6 +4,7 @@ $surface3: #F9F9F9;
 $surface4: #F2F2F2;
 $surface5: #F0F0F0;
 $surface6: #8A8A8A;
+$surface7: #262626;
 
 $brand: #0F2F31;
 $white: #FFFFFF;
