--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,6 +1,6 @@
 @import './fonts.scss';
 @import './variables.scss';
-// @import './mixins.scss';
+@import './mixins.scss';
 
 .card {
   margin: 0 auto;
@@ -35,6 +35,9 @@
   }
   &--medium {
     font-weight: 500;
+  }
+  &--semiBold {
+    font-weight: 600;
   }
   &--bold {
     font-weight: 700;
