--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -76,3 +76,25 @@
 
 //   color: #0f2f31;
 // }
+.count {
+  @font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  /* identical to box height */
+
+  letter-spacing: 0.015em;
+
+  color: #0f2f31;
+}
+.check-price {
+  @font-family: Montserrat;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 10px;
+  line-height: 12px;
+  justify-content: space-around;
+  color: #0f2f31;
+  margin-bottom: 11px;
+}
