--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,20 +1,19 @@
-$surface1: #C4C4C4;
-$surface2: #E5E5E5;
-$surface3: #F9F9F9;
-$surface4: #F2F2F2;
-$surface5: #F0F0F0;
-$surface6: #8A8A8A;
+$surface1: #c4c4c4;
+$surface2: #e5e5e5;
+$surface3: #f9f9f9;
+$surface4: #f2f2f2;
+$surface5: #f0f0f0;
+$surface6: #8a8a8a;
 $surface7: #262626;
 
-$brand: #0F2F31;
-$white: #FFFFFF;
+$brand: #0f2f31;
+$white: #ffffff;
 $black: #000000;
-$red1: #F60404;
-$red2: #F14040;
-$green: #0E702A;
+$red1: #f60404;
+$red2: #f14040;
+$green: #0e702a;
 
-
-$text1: #7B7B7B;
-$text2: #3D3D3D;
-$text3: rgba(#8D8D8D, 0.7);
+$text1: #7b7b7b;
+$text2: #3d3d3d;
+$text3: rgba(#8d8d8d, 0.7);
 $text4: #bfbfbf;
