--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -5,6 +5,7 @@ $surface4: #f2f2f2;
 $surface5: #f0f0f0;
 $surface6: #8a8a8a;
 $surface7: #262626;
+$surface8: #E6E6E6;
 
 $brand: #0f2f31;
 $white: #ffffff;
